2008-01-29  Dan Bernstein  <mitz@apple.com>

        Reviewed by Dave Hyatt.

        - test for http://bugs.webkit.org/show_bug.cgi?id=17085
          <rdar://problem/5714136> REGRESSION (r29839): All remote fonts are treated as SVG fonts

        This is the first @font-face test that actually tests loading font data
        from a URL.

        * fast/css/font-face-remote.html: Added.
        * fast/css/resources/Ahem.ttf: Added.
        * platform/mac/fast/css/font-face-remote-expected.checksum: Added.
        * platform/mac/fast/css/font-face-remote-expected.png: Added.
        * platform/mac/fast/css/font-face-remote-expected.txt: Added.

2008-01-29  Adele Peterson  <adele@apple.com>

        Reviewed by Oliver.

        Remove pixel results for text-only tests that I mistakingly added.

        * platform/mac/media/audio-constructor-expected.checksum: Removed.
        * platform/mac/media/audio-constructor-expected.png: Removed.
        * platform/mac/media/audio-constructor-src-expected.checksum: Removed.
        * platform/mac/media/audio-constructor-src-expected.png: Removed.
        * platform/mac/media/broken-video-expected.checksum: Removed.
        * platform/mac/media/broken-video-expected.png: Removed.
        * platform/mac/media/constructors-expected.checksum: Removed.
        * platform/mac/media/constructors-expected.png: Removed.
        * platform/mac/media/fallback-expected.checksum: Removed.
        * platform/mac/media/fallback-expected.png: Removed.
        * platform/mac/media/progress-event-expected.checksum: Removed.
        * platform/mac/media/progress-event-expected.png: Removed.
        * platform/mac/media/remove-from-document-expected.checksum: Removed.
        * platform/mac/media/remove-from-document-expected.png: Removed.
        * platform/mac/media/unsupported-rtsp-expected.checksum: Removed.
        * platform/mac/media/unsupported-rtsp-expected.png: Removed.